trybuild-qcell/src/compiletest/tlcell-13.stderr
error[E0277]: `*const ()` cannot be sent between threads safely
   --> src/compiletest/tlcell-13.rs:12:24
    |
12  |       std::thread::spawn(move || {
    |       ------------------ ^------
    |       |                  |
    |  _____|__________________within this `[closure@$DIR/src/compiletest/tlcell-13.rs:12:24: 12:31]`
    | |     |
    | |     required by a bound introduced by this call
13  | |         assert_eq!(*owner.ro(&cell), 100);
14  | |     }).join();
    | |_____^ `*const ()` cannot be sent between threads safely
    |
    = help: within `[closure@$DIR/src/compiletest/tlcell-13.rs:12:24: 12:31]`, the trait `Send` is not implemented for `*const ()`
note: required because it appears within the type `NotSendOrSync`
   --> $QCELL/src/tlcell.rs
    |
    | struct NotSendOrSync(*const ());
    |        ^^^^^^^^^^^^^
note: required because it appears within the type `PhantomData<NotSendOrSync>`
   --> $RUST/core/src/marker.rs
    |
    | pub struct PhantomData<T: ?Sized>;
    |            ^^^^^^^^^^^
note: required because it appears within the type `TLCellOwner<Marker>`
   --> $QCELL/src/tlcell.rs
    |
    | pub struct TLCellOwner<Q: 'static> {
    |            ^^^^^^^^^^^
note: required because it's used within this closure
   --> src/compiletest/tlcell-13.rs:12:24
    |
12  |     std::thread::spawn(move || {
    |                        ^^^^^^^
note: required by a bound in `spawn`
   --> $RUST/std/src/thread/mod.rs
    |
    | pub fn spawn<F, T>(f: F) -> JoinHandle<T>
    |        ----- required by a bound in this function
...
    |     F: Send + 'static,
    |        ^^^^ required by this bound in `spawn`
